<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/Department_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radSpecialityType"
        android:layout_width="102dp"
        android:layout_height="144dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radDSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dis" />

        <RadioButton
            android:id="@+id/radRSI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rsi" />

        <RadioButton
            android:id="@+id/radSEM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="24dp"
        android:text="@string/Club_text"
        app:layout_constraintStart_toStartOf="@+id/radSpecialityType"
        app:layout_constraintTop_toBottomOf="@+id/radSpecialityType" />

    <CheckBox
        android:id="@+id/chkAndro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="2dp"
        android:text="@string/android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/chkMicro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/microsoft"
        app:layout_constraintStart_toStartOf="@+id/chkAndro"
        app:layout_constraintTop_toBottomOf="@+id/chkAndro" />

    <Button
        android:id="@+id/btnAffich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="47dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@+id/chkMicro"
        app:layout_constraintTop_toTopOf="@+id/chkMicro" />

</android.support.constraint.ConstraintLayout>